<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="10dp"
    android:paddingTop="9dp"
    android:paddingEnd="10dp"
    android:paddingBottom="9dp">

    <!-- Year (gold, serif) -->
    <TextView
        android:id="@+id/tv_year"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display_medium"
        app:fontFamily="@font/playfair_display_medium"
        android:text="@string/label_year_range"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_divider_label" />

    <!-- Title + role -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_film_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/title"
            android:textColor="@color/text_1"
            android:textSize="@dimen/text_divider_label" />

        <TextView
            android:id="@+id/tv_film_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cast_role"
            android:textColor="@color/text_3"
            android:textSize="@dimen/text_badge" />

    </LinearLayout>

    <!-- Rating -->
    <TextView
        android:id="@+id/tv_film_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_format"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_badge" />

</LinearLayout>