<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_base">

    <!-- Center cluster: logo + brand + tagline -->
    <LinearLayout
        android:id="@+id/centerCluster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/countdownGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.42">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_logo_punch_e"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/tvBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/brand_name"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_display_l"
            android:fontFamily="@font/playfair_display"
            android:letterSpacing="0.15" />

        <TextView
            android:id="@+id/tvTagline"
            style="@style/TextAppearance.EMPlay.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/login_tagline"
            android:textColor="@color/text_3" />

    </LinearLayout>

    <!-- NOW SHOWING label above countdown blocks -->
    <TextView
        android:id="@+id/tvNowShowing"
        style="@style/TextAppearance.EMPlay.Micro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_now_showing"
        android:textColor="@color/accent"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@id/countdownGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 3 countdown blocks -->
    <LinearLayout
        android:id="@+id/countdownGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:id="@+id/block3"
            android:layout_width="72dp"
            android:layout_height="84dp"
            android:background="@drawable/bg_countdown_block"
            android:alpha="0.4">

            <TextView
                android:id="@+id/tvNum3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/splash_countdown_3"
                android:textSize="@dimen/text_countdown_large"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/text_3" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/block2"
            android:layout_width="72dp"
            android:layout_height="84dp"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/bg_countdown_block"
            android:alpha="0.4">

            <TextView
                android:id="@+id/tvNum2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/splash_countdown_2"
                android:textSize="@dimen/text_countdown_large"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/text_3" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/block1"
            android:layout_width="72dp"
            android:layout_height="84dp"
            android:background="@drawable/bg_countdown_block"
            android:alpha="0.4">

            <TextView
                android:id="@+id/tvNum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/splash_countdown_1"
                android:textSize="@dimen/text_countdown_large"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/text_3" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>